@@ -48,7 +48,7 @@ public class WebTest {
         InputStream is = null;
         BufferedReader input = null;
         try {
-            URL url = new URL("http://" + host  + ':' + port + '/' + contextRoot + path);
+            URL url = URI.create("http://" + host  + ':' + port + '/' + contextRoot + path).toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
