@@ -65,7 +65,7 @@ public class WebTest {
         try {
             String url = "http://" + host + ":" + port + contextRoot + "/";
             HttpURLConnection conn = (HttpURLConnection)
-                (new URL(url)).openConnection();
+                URI.create(url).toURL().openConnection();
 
             int code = conn.getResponseCode();
             if (code != 200) {
