@@ -43,7 +43,7 @@ public class WebTest2 {
     public static void run(String port) {
         try{
             System.out.println("Running test");
-            url = new URL("http://" + host  + ":" + port  + "/" + contextRoot + "/hello");
+            url = URI.create("http://" + host  + ":" + port  + "/" + contextRoot + "/hello").toURL();
             String originalLoc = url.toString();
             System.out.println("\n Invoking url: " + url.toString());
             conn = url.openConnection();
