@@ -51,8 +51,8 @@ public class WebTest {
     public void doTest() {
 
         try {
-            URL url = new URL("http://" + host  + ":" + port
-                              + contextRoot + "/foo.HTML");
+            URL url = URI.create("http://" + host  + ":" + port
+                              + contextRoot + "/foo.HTML").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
