@@ -74,8 +74,8 @@ public class WebTest {
 
         String sessionId = null;
 
-        URL url = new URL("http://" + host  + ":" + port + "/"
-            + "good-%E5%A5%BD-good/set.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + "/"
+            + "good-%E5%A5%BD-good/set.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -102,8 +102,8 @@ public class WebTest {
     private boolean doGetJsp(String sessionId) throws Exception {
         boolean expected = false;
 
-        URL url = new URL("http://" + host  + ":" + port + "/"
-            + "good-%E5%A5%BD-good/get.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + "/"
+            + "good-%E5%A5%BD-good/get.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
